<?xml version="1.0"?>
<package format="2">
  <name>mapping_pkg</name>
  <version>0.0.1</version>
  <description>The mapping_pkg package</description>
  <maintainer email="mikolaj@todo.todo">mikolaj</maintainer>

  <license>TODO</license>
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>Mapping</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>ellipsoid_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <!--build_depend>single_ellipsoid_msgs</build_depend-->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>ellipsoid_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>
  <!--exec_depend>single_ellipsoid_msgs</exec_depend-->
</package>
